<?xml version="1.0" encoding="utf-8"?>

<!--
    Rotation Quick Setting
    Add a Quick Settings tile to select portrait or landscape screen orientation.

    Copyright (C) 2017 Mudar Noufal <mn@mudar.ca>

    This file is part of RotationQS.

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<resources>
    <string name="app_name">Rotation Quick Setting</string>
    <string name="activity_main">@string/app_name</string>
    <string name="activity_onboarding">Welcome to RotationQS</string>
    <string name="activity_eula">EULA</string>
    <string name="tile_label">Rotation QS</string>
    <string name="tile_label_port">Portrait</string>
    <string name="tile_label_land">Landscape</string>
    <string name="tile_label_auto_rotate">Auto-rotate</string>
    <string name="notify_permissions_title">System permission request</string>
    <string name="notify_permissions_text">Tap to allow modifying screen rotation setting.</string>
    <string name="notify_channel_name">Default</string>
    <string name="notify_channel_description">Displays system permission request.</string>

    <!--Settings-->
    <string name="prefs_cat_permission">Permission</string>
    <string name="prefs_cat_orientation">Rotation</string>
    <string name="prefs_cat_general">General</string>
    <string name="prefs_permission_granted_title">Permission to modify settings</string>
    <string name="prefs_permission_granted_on">Granted</string>
    <string name="prefs_permission_granted_off">Not granted, app is disabled</string>
    <string name="prefs_reverse_port_title">Reverse portrait</string>
    <string name="prefs_reverse_land_title">Reverse landscape</string>
    <string name="prefs_auto_rotate_title">Include auto-rotate</string>
    <string name="prefs_help_title">Help</string>
    <string name="prefs_help_summary">How to add a custom Quick Settings tile</string>
    <string name="prefs_about_title">About</string>
    <string name="prefs_about_summary">Version %s</string>

    <!--About-->
    <string name="about_subtitle">Quick Settings tile to&#160;select portrait or&#160;landscape screen orientation.</string>
    <!--<string name="about_accelerometer_fix">Software fix for&#160;devices with accelerometer auto‑rotation issues.</string>-->
    <string name="about_credits">Android app developed by Mudar&#160;Noufal.</string>
    <string name="about_source_code">Open source project, available on GitHub.</string>
    <string name="about_license">Source code is released under the GPLv3 license from the Free Software Foundation.</string>
    <string name="about_rate_app">Please share or rate the app if you like it!</string>

    <!--Onboarding-->
    <string name="onboarding_title">@string/app_name</string>
    <string name="onboarding_desc">Add a Quick Settings tile to&#160;select portrait or&#160;landscape screen orientation. Intended as&#160;a&#160;fix for&#160;devices with auto‑rotation accelerometer issues.</string>

    <!--Buttons-->
    <string name="btn_try_it">Try it</string>
    <string name="btn_grant_permission">Grant permission</string>
    <string name="btn_skip">Skip for now</string>


    <!--Snackbar messages-->
    <string name="snackbar_try_rotation_port">Portrait rotation is set to 0&#160;degrees.</string>
    <string name="snackbar_try_rotation_port_reverse">Portrait rotation is set to 180&#160;degrees (upside&#160;down).</string>
    <string name="snackbar_try_rotation_land">Landscape rotation is set to 90&#160;degrees clockwise.</string>
    <string name="snackbar_try_rotation_land_reverse">Landscape rotation is set to 90&#160;degrees counterclockwise.</string>

    <!--Accessibility-->
    <string name="desc_about_credits">Credits</string>
    <string name="desc_about_source_code">Source code</string>
    <string name="desc_about_license">License</string>
    <string name="desc_about_rate">Rate app</string>

</resources>
