<?xml version="1.0" encoding="utf-8"?>

<!--
    Rotation Quick Setting
    Add a Quick Settings tile to select portrait or landscape screen orientation.

    Copyright (C) 2017 Mudar Noufal <mn@mudar.ca>

    This file is part of RotationQS.

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/onboarding_bg"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/logo_round_bg"
            android:src="@drawable/ic_screen_rotation"
            android:tint="@color/onboarding_fg" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_marginBottom="64dp"
            android:gravity="center_horizontal"
            android:text="@string/onboarding_title"
            android:textColor="@color/color_text_inv_primary"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginBottom="16dp"
            android:gravity="center|top"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:text="@string/onboarding_desc"
            android:textColor="@color/color_text_inv_secondary"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/description"
            android:gravity="center_horizontal|bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_grant_permission"
                style="?attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_grant_permission"
                android:textColor="@color/onboarding_fg" />

            <Button
                android:id="@+id/btn_skip"
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_skip"
                android:textColor="@color/color_text_inv_secondary" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>